# numerical-optimization

./: .gitignore  CMakeLists.txt  README.md
code/: CMakeLists.txt  bisection.cpp  fwd.h  lsm.h  method.cpp  method.h  multivariate.cpp  multivariate.h  termination.h  univariate.cpp  univariate.h
code/cg/: linearcg.hpp  nonlinearcg.hpp
code/global/: ga_helper.h  genetic_algorithm.hpp
code/lsm/: LM.hpp  gauss_newtons.hpp
code/multi/: cauchys.hpp  linearcg.hpp  nelder_mead.hpp  newtons.hpp  powells.hpp  quasi_newtons.hpp  termination.hpp
code/test/: CMakeLists.txt  test_bisection.cpp
doc/: assignment-1.tex
doc/homework2/: report.tex
doc/homework3/: report.tex
doc/homework4/: main.tex
doc/homework4/sections/: analysis.tex  implementation.tex  performance.tex  plot.tex
doc/homework5/: main.tex  refs.bib
doc/homework5/sections/: implementation.tex  performance.tex  plot.tex
doc/homework6/: main.tex
doc/homework6/sections/: implementation.tex  result.tex
doc/homework7/: main.tex
doc/homework7/sections/: implementation.tex  performance.tex
ext/: CMakeLists.txt
test/: CMakeLists.txt  assign1_benchmark.cpp  assign1_test.cpp  assign2_benchmark.cpp  assign2_test.cpp  assign3_benchmark.cpp  assign3_test.cpp  assignment1.cpp  function.cpp  function.h  function.hpp
test/hw1/: benchmark.cpp
test/hw2/: benchmark.cpp  test.cpp
test/hw3/: benchmark.cpp  plot.cpp  test.cpp
test/hw3/test/: gradient.cpp  termination.cpp
test/hw4/: benchmark.cpp  plot.cpp  test.cpp
test/hw4/config/: -3.5_2.3_a.json  -3.5_2.3_b.json  -3.5_2.3_c.json  1.2_1.2_a.json  1.2_1.2_b.json  1.2_1.2_c.json  10.5_-8.3_a.json  10.5_-8.3_b.json  10.5_-8.3_c.json  5.6_-1.2_a.json  5.6_-1.2_b.json  5.6_-1.2_c.json  5.6_1.2_a.json
test/hw4/plot/: plot.cpp
test/hw4/test/: hessian.cpp
test/hw5/: benchmark.cpp  plot.cpp
test/hw5/config/: linear_a.json  nonlinear_a.json  nonlinear_b.json  nonlinear_c.json
test/hw6/: observation.csv  test.cpp
test/hw7/: test.cpp
